--- a/trunk/099/pkg/items/decorations/decoration_mediumstonetable_ns.cfg
+++ b/trunk/099/pkg/items/decorations/decoration_mediumstonetable_ns.cfg
@@ -1,21 +1,21 @@
 item 1
 {
-	objtype	0x1202
+	objtype	0x1dbc
 	x		0
 	y		0
 	z		0
 	color	0
-	name
+	name stone table
 	facing
 }
 
 item 2
 {
-	objtype	0x1201
+	objtype	0x1dbb
 	x		0
 	y		1
 	z		0
 	color	0
-	name
+	name stone table
 	facing
 }
