--- a/trunk/099/pkg/items/decorations/itemdesc.cfg
+++ b/trunk/099/pkg/items/decorations/itemdesc.cfg
@@ -1499,12 +1499,13 @@ Item 0x24d0
 // Stone items
 //////////////////
 
-Item 0x3dff
+Item 0x45b
 {
 	Name				SmallStoneBench
 	script			rotate
 	VendorSellsFor		75
 	VendorBuysFor		20
+	Color				1895
 	Weight			2
 }
 
