--- a/trunk/099/pkg/skills/bardskills/musicianship/itemdesc.cfg
+++ b/trunk/099/pkg/skills/bardskills/musicianship/itemdesc.cfg
@@ -5,7 +5,10 @@ Item 0x17067
 	desc			flute
 	script		musicianship
 	succeed		0x3e
-	fail			0x1e2
+	fail			0x58d
+	provocation	0x58b
+	discordance	0x5b9
+	peacemaking	0x58c
 	VendorSellsFor	18
 	VendorBuysFor	6
 //	OldObjtype		0x7067
