--- a/trunk/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
@@ -121,7 +121,7 @@ Craftitem Tools
 	Item	Kettle
 	Item	FryingPan
 	
-//	Item    MalletChisel
+	Item    MalletandChisel
 //	Item    Mortar
 
 }
@@ -189,17 +189,9 @@ Craftitem Clay
 	Item	mug
 	Item	plate
 	Item	smallvase
-	Item	smallvase2
 	Item	largevase
-	Item	largevase2
 	Item	basin
 	Item	flowerpot
 	Item	largeflowerpot
-//	Item	statue1
-//	Item	statue2
-//	Item	statue3
-//	Item	statue4
-//	Item	statue5
-//	Item	bust
 	Item	Porcelain
 }
