--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -66,6 +66,7 @@ Craftitem Instruments
 	Item	Harp
 	Item	StandingHarp
 	Item	BambooFlute
+	Item	Fiddle
 }
 
 Craftitem Containers
@@ -132,8 +133,6 @@ Craftitem Weapons
 
 Craftitem Addons
 {
-	Item	AnvilDeed
-	Item	SmallForgeDeed
 	Item	TrainingDummyDeed
 	Item	PickpocketDipDeed
 	Item	SpinningWheelDeed
