--- a/trunk/099/pkg/skills/craftingskills/stonecrafting/config/stonecrafting.cfg
+++ b/trunk/099/pkg/skills/craftingskills/stonecrafting/config/stonecrafting.cfg
@@ -87,7 +87,7 @@ stoneitem 0x12ca
 ////////////////////////
 stoneitem 0x45b
 {
-	Name			small stone bench
+	Name			a small stone bench
 	Type			stone
 	material		3
 	skill		40
@@ -98,7 +98,7 @@ stoneitem 0x45b
 
 stoneitem 0x1218
 {
-	Name			stone chair
+	Name			a stone chair
 	Type			stone
 	material		4
 	skill		70
@@ -109,7 +109,7 @@ stoneitem 0x1218
 
 stoneitem 0xb01a
 {
-	Name			medium stone table deed
+	Name			a medium stone table
 	Type			stone
 	material		6
 	skill		75
@@ -119,7 +119,7 @@ stoneitem 0xb01a
 
 stoneitem 0xb01b
 {
-	Name			large stone table deed
+	Name			a large stone table
 	Type			stone
 	material		9
 	skill		90
@@ -130,7 +130,7 @@ stoneitem 0xb01b
 
 stoneitem 0xb01c
 {
-	Name			medium stone bench deed
+	Name			a medium stone bench
 	Type			stone
 	material		5
 	skill		60
@@ -140,7 +140,7 @@ stoneitem 0xb01c
 
 stoneitem 0xb01d
 {
-	Name			large stone bench deed
+	Name			a large stone bench
 	Type			stone
 	material		7
 	skill		80
@@ -154,12 +154,13 @@ stoneitem 0xb01d
 
 stoneitem 0x1947
 {
-	Name			cat with bowl statue
+	Name			a cat with bowl statue
 	Type			stone
 	material		5
 	skill			60
 	time			5
 	retain		1
+	mark			1
 }
 
 /////////////////////////
@@ -247,7 +248,7 @@ stoneitem 0x4071
 
 stoneitem 0x403b
 {
-	Name			aud-char
+	Name			an aud-char
 	Type			stone
 	material		15
 	skill			90
@@ -262,7 +263,7 @@ stoneitem 0x403b
 
 stoneitem 0xB000
 {
-	Name			anvil deed
+	Name			an anvil
 	Type			stone
 	material		20
 	skill		90
@@ -271,7 +272,7 @@ stoneitem 0xB000
 
 stoneitem 0xB001
 {
-	Name			forge deed
+	Name			a forge
 	Type			stone
 	material		20
 	skill		90
@@ -280,7 +281,7 @@ stoneitem 0xB001
 
 stoneitem 0xB00B
 {
-	Name			fireplace deed
+	Name			a fireplace
 	preview		0x3f14
 	Type			stone
 	material		50
@@ -290,16 +291,34 @@ stoneitem 0xB00B
 
 stoneitem 0xB00C
 {
-	Name			oven deed
+	Name			an oven
 	Type			stone
 	material		50
 	skill		90
 	time			6
 }
 
+capentry 0xB01E
+{
+	Name			a small gargish bed
+	Type			stone
+	material		20
+	skill		90
+	time			6
+}
+
+capentry 0xB01F
+{
+	Name			a large gargish bed
+	Type			stone
+	material		40
+	skill		90
+	time			6
+}
+
 capentry 0xB02F
 {
-	Name			abbatoir deed
+	Name			an abbatoir
 	Type			stone
 	material		40
 	skill		90
