--- a/trunk/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -292,6 +292,24 @@ tinkeritem 0x1059
 	Assemble		1
 }
 
+tinkeritem 0x0e9b
+{
+	name			a mortar and pestle
+	material		4
+	type			metal
+	skill		50
+	mark			1
+}
+
+tinkeritem 0x1849
+{
+	name			a heating stand
+	material		4
+	type			metal
+	skill		50
+	mark			1
+}
+
 
 
 
@@ -376,6 +394,17 @@ tinkeritem 0x0e85
 	mark			1
 }
 
+blacksmithy 0x0e87
+{ 
+	Name			a pitchfork
+	material		40
+	type			metal
+	skill		85
+	time			5
+	retain		1
+	Exceptional		1
+	mark			1
+}
 
 
 
@@ -410,7 +439,7 @@ tinkeritem 0x10e6
 	mark			1
 }
 
-tinkeritem 0x1034
+tinkeritem 0x1035
 {
 	name			a saw
 	material		4 
@@ -764,7 +793,7 @@ tinkeritem 0x1828
 
 tinkeritem 0x0DF2
 {
-	Name 		ankh wand
+	Name 		an ankh wand
 	material		25
 	type			gold
 	skill		75
@@ -772,7 +801,7 @@ tinkeritem 0x0DF2
 
 tinkeritem 0x0DF3
 {
-	Name 		fork wand
+	Name 		a fork wand
 	material		25
 	type			gold
 	skill		75
@@ -780,7 +809,7 @@ tinkeritem 0x0DF3
 
 tinkeritem 0x0DF4
 {
-	Name			cross wand
+	Name			a cross wand
 	material		25
 	type			gold
 	skill		75
@@ -788,7 +817,7 @@ tinkeritem 0x0DF4
 
 tinkeritem 0x0DF5
 {
-	Name			circle wand
+	Name			a circle wand
 	material		25
 	type			gold
 	skill		75
@@ -796,7 +825,7 @@ tinkeritem 0x0DF5
 
 tinkeritem 0x1085
 {
-	name			beads necklace
+	name			a beads necklace
 	material		8
 	type			gold
 	skill		70
@@ -804,7 +833,7 @@ tinkeritem 0x1085
 
 tinkeritem 0x1086
 {
-	name			bracelet
+	name			a bracelet
 	material		6
 	type			gold
 	skill		60
@@ -820,7 +849,7 @@ tinkeritem 0x1087
 
 tinkeritem 0x1088
 {
-	name			necklace with stone
+	name			a necklace with stone
 	material		8
 	type			gold
 	skill		70
@@ -828,7 +857,7 @@ tinkeritem 0x1088
 
 tinkeritem 0x1089
 {
-	name			golden necklace
+	name			a golden necklace
 	material		8
 	type			gold
 	skill		70
@@ -836,7 +865,7 @@ tinkeritem 0x1089
 
 tinkeritem 0x108a
 {
-	name			ring
+	name			a ring
 	material		4
 	type			gold
 	skill		50
