--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
@@ -480,7 +480,7 @@ carpentry 0x0dbf
 
 carpentry 0X1f14
 { 
-	Name			blank rune
+	Name			a blank rune
 	Type			wood
 	material		1
 	skill		90
@@ -490,7 +490,7 @@ carpentry 0X1f14
 
 carpentry 0xa04a
 { 
-	Name			broom
+	Name			a broom
 	Type			wood
 	material		10
 	skill		70
@@ -593,7 +593,7 @@ carpentry 0x0b4b
 
 capentry 0xB002
 {
-	Name			training dummy deed
+	Name			a training dummy
 	Type			wood
 	material		100
 	skill		90
@@ -602,7 +602,7 @@ capentry 0xB002
 
 capentry 0xB003
 {
-	Name			pickpocket dip deed
+	Name			a pickpocket dip
 	Type			wood
 	material		100
 	skill		90
@@ -611,7 +611,7 @@ capentry 0xB003
 
 capentry 0xB004
 {
-	Name			spinning wheel deed
+	Name			a spinning wheel
 	Type			wood
 	material		100
 	skill		90
@@ -620,7 +620,7 @@ capentry 0xB004
 
 capentry 0xB005
 {
-	Name			bed deed
+	Name			a bed
 	Type			wood
 	material		100
 	skill		90
@@ -629,7 +629,7 @@ capentry 0xB005
 
 capentry 0xB006
 {
-	Name			loom deed
+	Name			a loom
 	Type			wood
 	material		100
 	skill		90
@@ -638,7 +638,7 @@ capentry 0xB006
 
 capentry 0xB007
 {
-	Name			mill deed
+	Name			a mill
 	Type			wood
 	material		100
 	skill		90
@@ -666,7 +666,7 @@ carpentry 0x13b3
 
 carpentry 0x0e81
 { 
-	Name			shepherd's crook
+	Name			a shepherd's crook
 	Type			wood
 	material		20
 	skill		70
@@ -1244,7 +1244,7 @@ carpentry 0x285d
 // weapons
 Element 0x2d2a
 {
-	Name			elven composite longbow
+	Name			an elven composite longbow
 	Type			wood
 	Material		20
 	skill		85
@@ -1256,7 +1256,7 @@ Element 0x2d2a
 
 Element 0x2d2b
 {
-	Name			elven shortbow
+	Name			an elven shortbow
 	Type			wood
 	Material		15
 	skill		95
@@ -1576,7 +1576,7 @@ capentry 0xb02a
 // Addons
 capentry 0xB030
 {
-	Name			arcane circle deed
+	Name			an arcane circle
 	Type			wood
 	material		100
 	skill		90
@@ -1702,5 +1702,17 @@ capentry 0xb02e
 	skill		85
 	time			5
 	retain		1
+}
+
+carpentry  0x4025
+{ 
+	Name			a gargish chest
+	Type			wood
+	material		25
+	skill		70
+	lockable		1
+	time			4
+	retain		1
+	mark			1
 }
 
