--- a/trunk/099/config/servspecopt.cfg
+++ b/trunk/099/config/servspecopt.cfg
@@ -153,3 +153,5 @@ ItemColorMask=0x4FFF
 # Uncomment this if you want ethereal mounts and do not use older clients.
 
 UseWinLFH=1
+
+CoreSendsSeason=1
