--- a/trunk/099/pkg/combat/loot/itemgroups.cfg
+++ b/trunk/099/pkg/combat/loot/itemgroups.cfg
@@ -4,7 +4,6 @@ group leatherarmor
 	Item LeatherTunic
 	Item LeatherTunic
 	Item FemaleLeather
-	Item LeatherShorts
 	Item FemaleLeather
 	Item LeatherBustier
 	Item LeatherLeggings
@@ -29,6 +28,7 @@ group studdedarmor
 	Item StuddedTunic
 	Item FemaleStudded
 	Item StuddedBustier
+	Item LeatherShorts
 	Item StuddedLeggings
 	Item StuddedLeggings
 	Item StuddedLeggings
@@ -138,7 +138,6 @@ group allarmor
 	Item LeatherTunic
 	Item LeatherTunic
 	Item FemaleLeather
-	Item LeatherShorts
 	Item FemaleLeather
 	Item LeatherBustier
 	Item LeatherLeggings
@@ -160,6 +159,7 @@ group allarmor
 	Item StuddedTunic
 	Item FemaleStudded
 	Item StuddedBustier
+	Item LeatherShorts
 	Item StuddedLeggings
 	Item StuddedLeggings
 	Item StuddedLeggings
@@ -420,6 +420,18 @@ group allweapons
 	Item Scythe
 	Item BladedStaff
 	Item CrescentBlade
+	// sneaking the musical instruments in here so they spawn as magical.
+	Item flute
+	Item Tamborine
+	Item TamborineWithRibbon
+	Item Lute
+	Item Lute2
+	Item Drum
+	Item Harp
+	Item StandingHarp
+	Item Fiddle
+	Item BambooFlute
+	Item audchar
 }
 
 group jewelry
@@ -935,6 +947,8 @@ Group Junk
 	item Drum
 	item Harp
 	item StandingHarp
+	item Fiddle
+	item BambooFlute
 
 	item wand1
 	item wand2
