--- a/trunk/099/pkg/items/housing/itemdesc.cfg
+++ b/trunk/099/pkg/items/housing/itemdesc.cfg
@@ -1,6 +1,7 @@
 Item 0x0bd2
 {
 	Name			brasssign
+	Desc			house sign
 	Script		sign
 	ControlScript	signcontrol
 	movable		0
@@ -10,6 +11,7 @@ Item 0x0bd2
 Item 0x0bd0
 {
 	Name			woodensign
+	Desc			house sign
 	Script		sign
 	ControlScript	signcontrol
 	movable		0
