--- a/trunk/099/pkg/megacliloc/config/icp.cfg
+++ b/trunk/099/pkg/megacliloc/config/icp.cfg
@@ -8,6 +8,9 @@ ICP Register
 	Creator		MontuZ
 	C_Email		MontuZ@Gmail.com
 	
+	Maintainer		Agata
+	M_Email		natalia_buenota@hotmail.com
+	
 	#Script		cmdlevel	path
 
 	#TextCmd	cmdlevel	path
