--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
@@ -1,5 +1,6 @@
 ///////////////////
 ///////////////////
+///////////////////
 //  chairs
 ///////////////////
 
@@ -92,6 +93,8 @@ carpentry 0x0a4f
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -104,6 +107,8 @@ carpentry 0x0a53
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -116,6 +121,8 @@ carpentry 0x0a51
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -128,6 +135,8 @@ carpentry 0x0a4d
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -140,6 +149,8 @@ capentry 0x0A2C
 	Type			wood
 	material		40
 	skill		75
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			5
 	retain		1
@@ -152,6 +163,8 @@ capentry 0x0A34
 	Type			wood
 	material		40
 	skill		75
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			5
 	retain		1
@@ -164,6 +177,8 @@ Carpentry 0x0a30
 	Type			wood
 	material		40
 	skill		75
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			5
 	retain		1
@@ -176,6 +191,8 @@ Carpentry 0x0a38
 	Type			wood
 	material		40
 	skill		75
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			5
 	retain		1
@@ -262,6 +279,8 @@ carpentry 0x09aa
 	Type			wood
 	material		10
 	skill		90
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			5
 	retain		1
@@ -274,6 +293,8 @@ carpentry 0x0e7d
 	Type			wood
 	material		10
 	skill		90
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			5
 	retain		1
@@ -286,6 +307,8 @@ carpentry  0x0e42
 	Type			wood
 	material		25
 	skill		70
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			4
 	retain		1
@@ -298,6 +321,8 @@ carpentry  0x0e43
 	Type			wood
 	material		25
 	skill		70
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			4
 	retain		1
@@ -310,6 +335,8 @@ carpentry 0x09a9
 	Type			wood
 	material		10
 	skill		40
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			3
 	retain		1
@@ -322,6 +349,8 @@ carpentry 0x0e7e
 	Type			wood
 	material		10
 	skill		40
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			3
 	retain		1
@@ -334,6 +363,8 @@ carpentry 0x0e3f
 	Type			wood
 	material		15
 	skill		50
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			3
 	retain		1
@@ -346,6 +377,8 @@ carpentry 0x0e3e
 	Type			wood
 	material		15
 	skill		50
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			3
 	retain		1
@@ -358,6 +391,8 @@ carpentry 0x0e3c
 	Type			wood
 	material		20
 	skill		60
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			3
 	retain		1
@@ -370,6 +405,8 @@ carpentry 0x0e3d
 	Type			wood
 	material		20
 	skill		60
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			3
 	retain		1
@@ -1088,6 +1125,8 @@ carpentry 0x280b
 	Type			wood
 	material		45
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1100,6 +1139,8 @@ carpentry 0x280d
 	Type			wood
 	material		45
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1112,6 +1153,8 @@ carpentry 0x280f
 	Type			wood
 	material		45
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1124,6 +1167,8 @@ carpentry 0x2811
 	Type			wood
 	material		45
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1136,6 +1181,8 @@ carpentry 0x2813
 	Type			wood
 	material		45
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1148,6 +1195,8 @@ carpentry 0x2815
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1160,6 +1209,8 @@ carpentry 0x2817
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1172,6 +1223,8 @@ carpentry 0x2819
 	Type			wood
 	material		50
 	skill		85
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1184,6 +1237,8 @@ carpentry 0x281a
 	Type			wood
 	material		50
 	skill		85
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1196,6 +1251,8 @@ carpentry 0x2857
 	Type			wood
 	material		60
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1208,6 +1265,8 @@ carpentry 0x2859
 	Type			wood
 	material		60
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1220,6 +1279,8 @@ carpentry 0x285b
 	Type			wood
 	material		60
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1232,6 +1293,8 @@ carpentry 0x285d
 	Type			wood
 	material		60
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1462,6 +1525,8 @@ carpentry 0x2d05
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1474,6 +1539,8 @@ carpentry 0x2d07
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1486,6 +1553,8 @@ carpentry  0x2df1
 	Type			wood
 	material		25
 	skill		80
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			4
 	retain		1
@@ -1498,6 +1567,8 @@ carpentry  0x2df3
 	Type			wood
 	material		25
 	skill		80
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			4
 	retain		1
@@ -1511,6 +1582,8 @@ carpentry 0xb023
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1523,6 +1596,8 @@ carpentry 0xb024
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1535,6 +1610,8 @@ carpentry 0xb025
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1547,6 +1624,8 @@ carpentry 0xb026
 	Type			wood
 	material		50
 	skill		95
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			6
 	retain		1
@@ -1766,6 +1845,8 @@ carpentry  0x4025
 	Type			wood
 	material		25
 	skill		70
+	skill2			Tinkering
+	Difficulty2		40
 	lockable		1
 	time			4
 	retain		1
